# example-cloud-distributed-quicksort

./: .dockerignore  Dockerfile  README.md  diagrams.puml  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/example_cloud_distributed_quicksort/: __init__.py  kafka_utils.py  main.py  processor.py  web.py
tests/: test_kafka.py  test_main.py  test_web.py
