[project]
name = "example-cloud-distributed-quicksort"
version = "0.1.0"
description = "An example distributed quicksort implementation for learning Kubernetes and cloud computing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
quicksort = "example_cloud_distributed_quicksort.main:cli_main"
quicksort-web = "example_cloud_distributed_quicksort.web:web_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.black]
target-version = ['py312']
line-length = 88

[tool.mypy]
python_version = "3.12"
strict = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "httpx>=0.28.1",
]
